# UBB-master-CISE

./: api.py  formated.json  formated.jsonl  main.py  manual-test.py  openai-trainer.py  pyproject.toml  sample.py  validation.jsonl
created_files/: a8dfd527-5641-49c4-a068-f6887deeadae.py
queries/: lmql_queries.py
results/: results-0.json  results-10.json  results-100.json  results-1000.json  results-1010.json  results-1020.json  results-1030.json  results-1040.json  results-1050.json  results-1060.json  results-1070.json  results-1080.json  results-1090.json  results-110.json  results-1100.json  results-1110.json  results-1120.json  results-1130.json  results-1140.json  results-1150.json  results-1160.json  results-1170.json  results-1180.json  results-1190.json  results-120.json  results-1200.json  results-1210.json  results-1220.json  results-1230.json  results-1240.json  results-1250.json  results-1260.json  results-1270.json  results-1280.json  results-1290.json  results-130.json  results-1300.json  results-1310.json  results-1320.json  results-1330.json  (+119 more)
